Improve check for trailing digit in module name